[package]
name = "mist"
version = "0.10.0"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com"]
description = "The official command-line interface for the makedeb Package Repository"
edition = "2021"
homepage = "https://github.com/makedeb/mist"
repository = "https://github.com/makedeb/mist"
license = "GPL-3.0-or-later"
keywords = ["makedeb", "mpr", "apt", "mpr-helper", "helper"]
categories = ["command-line-utilities"]

[dependencies]
bat = { version = "0.22.1", default-features = false, features = ["paging", "regex-fancy"]}
colored = { git = "https://github.com/mackwic/colored" }
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["cargo", "env"] }
dirs = "4.0.0"
edit = "0.1.4"
exitcode = "1.1.2"
flate2 = "1.0.25"
lazy_static = "1.4.0"
makedeb-srcinfo = "0.8.1"
quit = "1.1.4"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
rust-apt = { git = "https://gitlab.com/volian/rust-apt" }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tempfile = "3.3.0"
termsize = "0.1.6"
users = "0.11.0"
which = "4.3.0"
